...
    <string name="_any">any</string>
    <string name="_at_time">\u0020at %s</string>
    <string name="_from_device">\u0020from %s</string>
    <string name="_none">none</string>
    <string name="_on_date_at_time">\u0020on %1$s at %2$s</string>
    <string name="_time_pattern" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="about">About</string>
    <string name="acceptable_phone_numbers">Acceptable phone numbers (%s)</string>
    <string name="acceptable_words">Acceptable phrases (%s)</string>
    <string name="add">Add</string>
    <string name="add_phone_to_blacklist">add phone to blacklist</string>
    <string name="add_phone_to_blacklist_action">Add phone to blacklist</string>
    <string name="add_phone_to_whitelist">add phone to whitelist</string>
    <string name="add_phone_to_whitelist_action">Add phone to whitelist</string>
    <string name="add_text_to_blacklist">add text to blacklist</string>
    <string name="add_text_to_blacklist_action">Add text to blacklist</string>
...
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="addresses">%d addresses</string>
    <string name="allow_control_remotely">Allow to control application by sending email on service account</string>
    <string name="allow_only_recipients">Accept service mail only from recipients</string>
    <string name="app_version">Application version: %s</string>
    <string name="ask_clear_history">Clear history?</string>
    <string name="ask_clear_list">Clear list?</string>
    <string name="bad_telegram_bot_token">Telegram bot token is invalid.</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="battery_optimization_reason">To ensure that the app continues to work properly when your device is in standby mode, disable battery optimization for the app.</string>
    <string name="blacklist">Blacklist</string>
    <string name="called_phone">Called: %1$s%2$s</string>
    <string name="caller_name">Caller name</string>
    <string name="caller_phone">Caller: %1$s%2$s</string>
    <string name="check_settings">Please check your settings</string>
    <string name="check_your_settings">Please check your settings</string>
    <string name="clear">Clear</string>
    <string name="contact_no_permission_read_contact">no permission to read contacts</string>
    <string name="copyright" translatable="false">Copyright © BoPr, 2016-2024</string>
    <string name="device_location">Device location</string>
    <string name="device_name">Device name</string>
    <string name="device_name_to_show">Device name to be shown in the message (leave blank to use default)</string>
    <string name="disabled">Disabled</string>
    <string name="dispatch_time">Dispatch time</string>
    <string name="do_not_ask_again">Don\'t ask me again</string>
    <string name="do_not_process_call">Do not process the call</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="email_content">Email content</string>
    <string name="email_language">Email language</string>
    <string name="email_message">Email message</string>
    <string name="email_message_content">Email message content</string>
    <string name="email_message_language">Email message language</string>
    <string name="email_message_summary">Email message settings</string>
...
    <string name="notifications">Notifications</string>
    <string name="notify_remote_actions">Display notification when actions are performed</string>
    <string name="notify_send_success">Display notification when message has been successfully sent</string>
    <string name="number_in_blacklist">Number was in blacklist</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="open_source">Open source</string>
    <string name="open_source_and_third_party">Open source and third party software</string>
    <string name="operation_complete">Operation complete</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="outgoing_call_of">Outgoing call: %s</string>
    <string name="outgoing_call_to">Outgoing call to</string>
    <string name="outgoing_sms">Outgoing SMS</string>
    <string name="outgoing_sms_to">Outgoing SMS to</string>
...
    <string name="process_all_pending">Process pending</string>
    <string name="process_service_mail">Check service mail now</string>
    <string name="processed">Processed</string>
    <string name="processed_at">at: %s</string>
    <string name="recipient_already_exists">Recipient %1$s is already exists</string>
    <string name="recipient_device">Recipient:</string>
    <string name="recipients">Recipients</string>
    <string name="regular_expression">Regular expression</string>
    <string name="remote_action">Remote action</string>
    <string name="remote_control">Remote control</string>
    <string name="email_remote_control_account">Service account</string>
    <string name="remove">Remove</string>
    <string name="remove_phone_from_filter">Remove phone from all rules</string>
...
    <string name="text_removed_from_filter">Text removed from filter</string>
    <string name="text_whitelist">Text whitelist</string>
    <string name="this_is_test_message">This message is to check your settings. If you received it, your settings are correct.</string>
    <string name="time">Time:</string>
    <string name="time_time">Time: %s</string>
    <string name="trigger_off">Trigger was off</string>
    <string name="triggers">Triggers</string>
    <string name="unable_determine_chat">Unable to determine which chat to send messages to. Open Telegram app, send \"Hi\" to your SMS bot, and try again.</string>
    <string name="unable_send_email">Unable to send email. %s</string>
    <string name="unable_send_sms">Unable to send SMS. %s</string>
    <string name="unacceptable_phone_numbers">Unacceptable phone numbers (%s)</string>
    <string name="unacceptable_words">Unacceptable phrases (%s)</string>
    <string name="undo">Undo</string>
    <string name="unexpected_error">Something went wrong. Please check your network connection.</string>
    <string name="unknown_contact">Unknown contact</string>
    <string name="unknown_location">unknown</string>
    <string name="unspecified">Not specified</string>
    <string name="what_email_contains">Information that the message should contain</string>
    <string name="when_send_email">Conditions under which the message should be sent</string>
...
