<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_log_mar_all_read"
        android:title="@string/mark_all_as_read" />

    <item
        android:id="@+id/action_log_clear"
        android:title="@string/clear" />

</menu>
